// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`remarkDescriptionList > should transform \`list\` to \`descriptionList\` (from AST) 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
            "start": {
              "column": 3,
              "line": 1,
              "offset": 2,
            },
          },
          "type": "text",
          "value": "term 1",
        },
      ],
      "position": {
        "end": {
          "column": 10,
          "line": 1,
          "offset": 9,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "descriptionTerm",
    },
    {
      "children": [
        {
          "children": [
            {
              "position": {
                "end": {
                  "column": 13,
                  "line": 2,
                  "offset": 22,
                },
                "start": {
                  "column": 4,
                  "line": 2,
                  "offset": 13,
                },
              },
              "type": "text",
              "value": "details 1",
            },
          ],
          "position": {
            "end": {
              "column": 13,
              "line": 2,
              "offset": 22,
            },
            "start": {
              "column": 4,
              "line": 2,
              "offset": 13,
            },
          },
          "type": "paragraph",
        },
      ],
      "position": {
        "end": {
          "column": 13,
          "line": 2,
          "offset": 22,
        },
        "start": {
          "column": 2,
          "line": 2,
          "offset": 11,
        },
      },
      "type": "descriptionDetails",
    },
    {
      "children": [
        {
          "children": [
            {
              "position": {
                "end": {
                  "column": 13,
                  "line": 3,
                  "offset": 35,
                },
                "start": {
                  "column": 4,
                  "line": 3,
                  "offset": 26,
                },
              },
              "type": "text",
              "value": "details 2",
            },
          ],
          "position": {
            "end": {
              "column": 13,
              "line": 3,
              "offset": 35,
            },
            "start": {
              "column": 4,
              "line": 3,
              "offset": 26,
            },
          },
          "type": "paragraph",
        },
      ],
      "position": {
        "end": {
          "column": 13,
          "line": 3,
          "offset": 35,
        },
        "start": {
          "column": 2,
          "line": 3,
          "offset": 24,
        },
      },
      "type": "descriptionDetails",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 9,
              "line": 4,
              "offset": 44,
            },
            "start": {
              "column": 3,
              "line": 4,
              "offset": 38,
            },
          },
          "type": "text",
          "value": "term 2",
        },
      ],
      "position": {
        "end": {
          "column": 10,
          "line": 4,
          "offset": 45,
        },
        "start": {
          "column": 1,
          "line": 4,
          "offset": 36,
        },
      },
      "type": "descriptionTerm",
    },
    {
      "children": [
        {
          "children": [
            {
              "position": {
                "end": {
                  "column": 13,
                  "line": 5,
                  "offset": 58,
                },
                "start": {
                  "column": 4,
                  "line": 5,
                  "offset": 49,
                },
              },
              "type": "text",
              "value": "details 3",
            },
          ],
          "position": {
            "end": {
              "column": 13,
              "line": 5,
              "offset": 58,
            },
            "start": {
              "column": 4,
              "line": 5,
              "offset": 49,
            },
          },
          "type": "paragraph",
        },
      ],
      "position": {
        "end": {
          "column": 13,
          "line": 5,
          "offset": 58,
        },
        "start": {
          "column": 2,
          "line": 5,
          "offset": 47,
        },
      },
      "type": "descriptionDetails",
    },
  ],
  "position": {
    "end": {
      "column": 13,
      "line": 5,
      "offset": 58,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "descriptionList",
}
`;

exports[`remarkDescriptionList > should transform \`list\` to \`descriptionList\` with multiple terms (from AST) 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
            "start": {
              "column": 3,
              "line": 1,
              "offset": 2,
            },
          },
          "type": "text",
          "value": "term 1",
        },
      ],
      "position": {
        "end": {
          "column": 10,
          "line": 1,
          "offset": 9,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "descriptionTerm",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 9,
              "line": 2,
              "offset": 18,
            },
            "start": {
              "column": 3,
              "line": 2,
              "offset": 12,
            },
          },
          "type": "text",
          "value": "term 2",
        },
      ],
      "position": {
        "end": {
          "column": 10,
          "line": 2,
          "offset": 19,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 10,
        },
      },
      "type": "descriptionTerm",
    },
    {
      "children": [
        {
          "children": [
            {
              "position": {
                "end": {
                  "column": 13,
                  "line": 3,
                  "offset": 32,
                },
                "start": {
                  "column": 4,
                  "line": 3,
                  "offset": 23,
                },
              },
              "type": "text",
              "value": "details 1",
            },
          ],
          "position": {
            "end": {
              "column": 13,
              "line": 3,
              "offset": 32,
            },
            "start": {
              "column": 4,
              "line": 3,
              "offset": 23,
            },
          },
          "type": "paragraph",
        },
      ],
      "position": {
        "end": {
          "column": 13,
          "line": 3,
          "offset": 32,
        },
        "start": {
          "column": 2,
          "line": 3,
          "offset": 21,
        },
      },
      "type": "descriptionDetails",
    },
    {
      "children": [
        {
          "children": [
            {
              "position": {
                "end": {
                  "column": 13,
                  "line": 4,
                  "offset": 45,
                },
                "start": {
                  "column": 4,
                  "line": 4,
                  "offset": 36,
                },
              },
              "type": "text",
              "value": "details 2",
            },
          ],
          "position": {
            "end": {
              "column": 13,
              "line": 4,
              "offset": 45,
            },
            "start": {
              "column": 4,
              "line": 4,
              "offset": 36,
            },
          },
          "type": "paragraph",
        },
      ],
      "position": {
        "end": {
          "column": 13,
          "line": 4,
          "offset": 45,
        },
        "start": {
          "column": 2,
          "line": 4,
          "offset": 34,
        },
      },
      "type": "descriptionDetails",
    },
  ],
  "position": {
    "end": {
      "column": 13,
      "line": 4,
      "offset": 45,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "descriptionList",
}
`;
